- update html code - fix spacing issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -455,7 +455,7 @@
 
 .footer__column_content_hours
 {
-  margin: auto;
+  margin-left: auto;
 }
 
 .footer__column_content_social
